New Project Modified

--- a/index.html
+++ b/index.html
@@ -31,6 +31,31 @@
           <p>Lorem ipsum dolor sit amet,<u>test link</u> adipiscing elit. <strong>This is strong</strong> Nullam dignissim convallis est. Quisque aliguam. <em>This is emphasized.</em> Donec faucibus. Nunk iaculis suscipit dui. 5<sup>3</sup> = 125. Water is H<sup>2</sup>O. Nam sit amet sem. Aliquam libero nisi, imprediet at, tincidunt nec, gravida vehicula, nisl. <em>The New York Times</em>. <u>Underline.</u> Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat att, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
           <p>HTML and CSS are our tools. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feguiat in, nunk. Morbi imperdiet augue quis tellus. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. To copy a file type COPY <em>filename.</em> <s>Dinner's at 5:00.</s> Lets make that 7. This <s>text</s> has been struc.</p>
           <hr>
+          <section>
+            <h1>Table</h1>
+            <table>
+              <tr>
+                <td>Header</td>
+                <td>Header</td>
+                <td>Header</td>
+              </tr>
+              <tr>
+                <td>Lviv</td>
+                <td>Kyiv</td>
+                <td>Kharkiv</td>
+              </tr>
+              <tr>
+                <td>Odessa</td>
+                <td>Zhytomyr</td>
+                <td>Dnipropetrovsk</td>
+              </tr>
+              <tr>
+                <td>Sumy</td>
+                <td>Tsernivtsi</td>
+                <td>Lutsk</td>
+              </tr>
+            </table>
+          </section>
           <h1>Undordered List</h1>
           <ul>
             <li>List item 1</li>
@@ -57,7 +82,43 @@
           <h2>Article title</h2>
           <p>Article description</p>
           <h3>Preformatted Text </h3>
+          <section>
+          <pre>
+            Text
+            in a pre element
+            is displayed in a fixed-width
+            font, it preserves
+            both spaces and
+            line breaks
+          </pre>
+          <h1>Code</h1>
+          <pre>
+            .wrapper {
+            display: flax;
+            vertical-align: middle;
+            justify-content: center;
+            }
+          </pre>
+          </section>
+          <h2>Blockquotes</h2>
+          <p>Let's keep it simple. Atalics are good to help sit it off from the body text. be sure to style the citationю</p>
+          <p><em>"If you go back a few  hundred years, what we take for granted today would seem like magic-being able to tolk to people over long distances, to transmit images, flying, accessing vast amounts of data like an aracle. These are all things that would have been considered magic a few hundred years ago."</em></p>
+          <u><em>Elon Musk</em></u>
+          <hr>
+          <form>
+            <label for="name">First name:</label>
+            <input type="text" id="name" name="name">
+          </form>
+          <form>
+            <label for="name">Sur name:</label>
+            <input type="text" id="name" name="name">
+          </form>
+          <form>
+            <label for="name">Email:</label>
+            <input type="text" id="name" name="name">
+          </form>
         </div>
+        <footer><p>© Copyright Epam Sistems </p></footer>
       </div>
     </div>
   </div>
