--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h6><u>Header6</u></h6>
           <hr>
           <p>Lorem ipsum dolor sit amet,<u>test link</u> adipiscing elit. <strong>This is strong</strong> Nullam dignissim convallis est. Quisque aliguam. <em>This is emphasized.</em> Donec faucibus. Nunk iaculis suscipit dui. 5<sup>3</sup> = 125. Water is H<sup>2</sup>O. Nam sit amet sem. Aliquam libero nisi, imprediet at, tincidunt nec, gravida vehicula, nisl. <em>The New York Times</em>. <u>Underline.</u> Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat att, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.</p>
-          <p>HTML and CSS are our tools. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feguiat in, nunk. Morbi imperdiet augue quis tellus. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. To copy a file type COPY <em>filename.</em> <s>Dinner's at 5:00.</s> Lets make that 7. This <s>text</s> has been struc.</p>
+          <p>HTML and CSS are our tools. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feguiat in, nunk. Morbi imperdiet augue quis tellus. Praesent mattis, massa quis luctus fermentum, turpis mi volutpat justo, eu volutpat enim diam eget metus. To copy a file type COPY <em>filename.</em> <s>Dinner's at 5:00.</s><mark>Lets make that 7.</mark> This <s>text</s> has been struc.</p>
           <hr>
           <section>
             <h1>Table</h1>
